[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eyetracker"
version = "1.0.0"
description = "Control your mouse with eye and head movement using MediaPipe Face Mesh."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8,<3.13"
authors = [
    {name = "Sir. Oscar MG", email = "sir.oscargatheru@gmail.com"},
]
keywords = ["eye-tracking", "accessibility", "mediapipe", "opencv", "mouse-control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Adaptive Technologies",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "pyautogui>=0.9.54",
]

[project.urls]
Homepage = "https://github.com/your-username/EyeTracker"
Repository = "https://github.com/your-username/EyeTracker"
Issues = "https://github.com/your-username/EyeTracker/issues"

[project.scripts]
eyetracker = "main:main"
